Fixed a bug where Redactor menus would get clipped if they extended beyond their containing pane

--- a/src/resources/css/craft.scss
+++ b/src/resources/css/craft.scss
@@ -692,7 +692,7 @@ ul.tree,
 /*  Panes, Modals and HUDs
 /* ----------------------------------------*/
 
-.pane { @include pane; position: relative; margin: 14px 0; padding: 24px; border-radius: 3px; word-wrap: break-word; @include box-sizing(border-box); overflow-x: hidden; }
+.pane { @include pane; position: relative; margin: 14px 0; padding: 24px; border-radius: 3px; word-wrap: break-word; @include box-sizing(border-box); overflow: hidden; }
 
 .modal,
 .hud,
@@ -813,7 +813,7 @@ body #redactor_modal_overlay { background: rgba(255,255,255,0.75); }
 .menu,
 .ui-datepicker,
 .ui-timepicker-list,
-.redactor_dropdown { z-index: 9999; border-radius: 3px; background: #fff; @include user-select(none);
+body .redactor_dropdown { z-index: 9999; margin-bottom: 10px; border-radius: 3px; background: #fff; @include user-select(none);
 	@include box-shadow(0 0 0 1px rgba(0,0,0,0.1), 0 5px 25px -5px rgba(0,0,0,0.25));
 }
 
@@ -821,11 +821,11 @@ body #redactor_modal_overlay { background: rgba(255,255,255,0.75); }
 body .redactor_dropdown { padding: 4px 14px; }
 
 .menu ul li a,
-body .redactor_dropdown a { margin: 0 -14px; padding: 3px 14px; font-size: 12px; color: $textcolor; text-decoration: none; }
+body .redactor_dropdown a { margin: 0 -14px; padding: 3px 14px; color: $textcolor; text-decoration: none; }
 
 .menu { display: none; position: absolute; }
 .menu ul li + li { margin-top: 3px; }
-.menu ul li a { display: block !important; }
+.menu ul li a { display: block !important; font-size: 12px; }
 .menu ul li a:not(.sel):hover,
 .menu ul li a:not(.sel):hover .light,
 .menu:not(:hover) ul li a:not(.sel).hover,
